# action-cmake

./: .gitattributes  README.md  action.yml
.github/workflows/: build-and-test.yml
__tests__/cmake/: CMakeLists.txt
__tests__/cmake/hello/: CMakeLists.txt  hello.cpp
__tests__/hello/: CMakeLists.txt  hello.cpp
